fix some exceptions & code cleanup